--- a/naqlah.client/src/app/Pages/admin/side-bar/side-bar.component.html
+++ b/naqlah.client/src/app/Pages/admin/side-bar/side-bar.component.html
@@ -182,8 +182,27 @@
       </span>
     </div>
     <div *ngIf="openDropdown === 'messages'" class="dropdown-links space-y-2">
-      <a routerLink="/go-admin/dashboard/messages/inbox" class="block side-bar_links mt-2">Inbox</a>
-      <a routerLink="/go-admin/dashboard/messages/sent" class="block side-bar_links">Sent</a>
+      <a routerLink="/admin/chat/serviceRequest" class="block side-bar_links--dropdown flex items-center gap-[10px]">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18.3346 5.20768V9.45766C18.3346 10.516 17.9846 11.4077 17.3596 12.0243C16.743 12.6493 15.8513 12.9993 14.793 12.9993V14.5077C14.793 15.0743 14.1596 15.416 13.693 15.0993L12.8846 14.566C12.9596 14.3077 12.993 14.0243 12.993 13.7243V10.3327C12.993 8.6327 11.8596 7.49935 10.1596 7.49935H4.5013C4.38463 7.49935 4.2763 7.5077 4.16797 7.51603V5.20768C4.16797 3.08268 5.58464 1.66602 7.70964 1.66602H14.793C16.918 1.66602 18.3346 3.08268 18.3346 5.20768Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12.993 10.3334V13.725C12.993 14.025 12.9596 14.3083 12.8846 14.5667C12.5763 15.7917 11.5596 16.5583 10.1596 16.5583H7.89297L5.3763 18.2333C5.0013 18.4917 4.5013 18.2167 4.5013 17.7667V16.5583C3.6513 16.5583 2.94297 16.275 2.4513 15.7833C1.9513 15.2833 1.66797 14.575 1.66797 13.725V10.3334C1.66797 8.75002 2.6513 7.65835 4.16797 7.51668C4.2763 7.50835 4.38463 7.5 4.5013 7.5H10.1596C11.8596 7.5 12.993 8.63335 12.993 10.3334Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        {{ 'ADMIN.SIDEBAR.USERSPAGE.CAPTAIN' | translate }}
+      </a>
+      <a routerLink="/admin/chat/serviceRequest" class="block side-bar_links--dropdown flex items-center gap-[10px]">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18.3346 5.20768V9.45766C18.3346 10.516 17.9846 11.4077 17.3596 12.0243C16.743 12.6493 15.8513 12.9993 14.793 12.9993V14.5077C14.793 15.0743 14.1596 15.416 13.693 15.0993L12.8846 14.566C12.9596 14.3077 12.993 14.0243 12.993 13.7243V10.3327C12.993 8.6327 11.8596 7.49935 10.1596 7.49935H4.5013C4.38463 7.49935 4.2763 7.5077 4.16797 7.51603V5.20768C4.16797 3.08268 5.58464 1.66602 7.70964 1.66602H14.793C16.918 1.66602 18.3346 3.08268 18.3346 5.20768Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12.993 10.3334V13.725C12.993 14.025 12.9596 14.3083 12.8846 14.5667C12.5763 15.7917 11.5596 16.5583 10.1596 16.5583H7.89297L5.3763 18.2333C5.0013 18.4917 4.5013 18.2167 4.5013 17.7667V16.5583C3.6513 16.5583 2.94297 16.275 2.4513 15.7833C1.9513 15.2833 1.66797 14.575 1.66797 13.725V10.3334C1.66797 8.75002 2.6513 7.65835 4.16797 7.51668C4.2763 7.50835 4.38463 7.5 4.5013 7.5H10.1596C11.8596 7.5 12.993 8.63335 12.993 10.3334Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        {{ 'ADMIN.SIDEBAR.USERSPAGE.SERVICEREQUEST' | translate }}
+      </a>
+      <a routerLink="/admin/chat/review" class="block side-bar_links--dropdown flex items-center gap-[10px]">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18.3346 5.20768V9.45766C18.3346 10.516 17.9846 11.4077 17.3596 12.0243C16.743 12.6493 15.8513 12.9993 14.793 12.9993V14.5077C14.793 15.0743 14.1596 15.416 13.693 15.0993L12.8846 14.566C12.9596 14.3077 12.993 14.0243 12.993 13.7243V10.3327C12.993 8.6327 11.8596 7.49935 10.1596 7.49935H4.5013C4.38463 7.49935 4.2763 7.5077 4.16797 7.51603V5.20768C4.16797 3.08268 5.58464 1.66602 7.70964 1.66602H14.793C16.918 1.66602 18.3346 3.08268 18.3346 5.20768Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12.993 10.3334V13.725C12.993 14.025 12.9596 14.3083 12.8846 14.5667C12.5763 15.7917 11.5596 16.5583 10.1596 16.5583H7.89297L5.3763 18.2333C5.0013 18.4917 4.5013 18.2167 4.5013 17.7667V16.5583C3.6513 16.5583 2.94297 16.275 2.4513 15.7833C1.9513 15.2833 1.66797 14.575 1.66797 13.725V10.3334C1.66797 8.75002 2.6513 7.65835 4.16797 7.51668C4.2763 7.50835 4.38463 7.5 4.5013 7.5H10.1596C11.8596 7.5 12.993 8.63335 12.993 10.3334Z" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        {{ 'ADMIN.SIDEBAR.CHAT.REVIEW' | translate }}
+      </a>
     </div>
   </div>
 
