--- a/naqlah.client/src/app/Pages/admin/admin-home/admin-home.component.css
+++ b/naqlah.client/src/app/Pages/admin/admin-home/admin-home.component.css
@@ -19,14 +19,14 @@
   gap: 5px;
 }
 .cards-info:nth-child(1) {
-  background-color: #EAF9C8;
+  background-color: linear-gradient(135deg, #667eea 0%, #764ba2 100%)
 }
 .cards-info:nth-child(2) {
-  background-color: #9ECAC1;
+  background-color: linear-gradient(135deg, #f093fb 0%, #f5576c 100%)
 }.cards-info:nth-child(3) {
-  background-color: #DFEEDF;
+  background-color:  linear-gradient(135deg, #4facfe 0%, #00f2fe 100%)
 }.cards-info:nth-child(4) {
-  background-color: #96B9D8;
+  background-color: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%)
 }.cards-info:nth-child(5) {
-  background-color: #DFEEDF;
+  background-color: linear-gradient(135deg, #fa709a 0%, #fee140 100%)
 }
