--- a/naqlah.client/src/app/Pages/admin/users/captain/edit-captain/edit-captain.component.html
+++ b/naqlah.client/src/app/Pages/admin/users/captain/edit-captain/edit-captain.component.html
@@ -2,7 +2,7 @@
   <h2 class="text-2xl font-bold mb-8">تعديل بيانات الكابتن</h2>
 
   <form [formGroup]="captainForm" (ngSubmit)="submitForm()" class="space-y-4">
-    <div class="grid grid-cols-1 md: grid-cols-2 gap-[15px]">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-[15px]">
       <div class="flex flex-col">
         <label for="nameAr" class="font-medium">الاسم بالعربي</label>
         <input
@@ -77,7 +77,7 @@
                     accept="image/*" hidden />
             </div>
             <div *ngIf="imagePreview" class="custom-card border border-dashed rounded-xl p-4 max-w-xs">
-              <img [src]="imagePreview" alt="معاينة الصورة" class="rounded-xl h-[150px] w-[150px] w-full object-cover" />
+              <img [src]="imagePreview" alt="معاينة الصورة" class="rounded-xl h-[150px] w-full object-cover" />
             </div>
           </div>
         </div>
