--- a/naqlah.client/src/app/Pages/admin/side-bar/side-bar.component.html
+++ b/naqlah.client/src/app/Pages/admin/side-bar/side-bar.component.html
@@ -436,6 +436,56 @@
     </a>
   </div>
 
+  <!-- Main Categories -->
+  <div>
+    <a
+      class="flex items-center cursor-pointer side-bar_links side-bar_links gap-[10px]"
+      routerLink="/admin/main-categories"
+    >
+      <svg
+        width="20"
+        height="20"
+        viewBox="0 0 20 20"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M7.5 2.5H12.5C14.1667 2.5 15 3.33333 15 5V7.5C15 9.16667 14.1667 10 12.5 10H7.5C5.83333 10 5 9.16667 5 7.5V5C5 3.33333 5.83333 2.5 7.5 2.5Z"
+          stroke="#292D32"
+          stroke-width="1.5"
+          stroke-miterlimit="10"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M7.5 12.5H12.5C14.1667 12.5 15 13.3333 15 15V15.8333C15 17.5 14.1667 18.3333 12.5 18.3333H7.5C5.83333 18.3333 5 17.5 5 15.8333V15C5 13.3333 5.83333 12.5 7.5 12.5Z"
+          stroke="#292D32"
+          stroke-width="1.5"
+          stroke-miterlimit="10"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M2.5 5V7.5C2.5 9.16667 3.33333 10 5 10H5.83333"
+          stroke="#292D32"
+          stroke-width="1.5"
+          stroke-miterlimit="10"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M17.5 5V7.5C17.5 9.16667 16.6667 10 15 10H14.1667"
+          stroke="#292D32"
+          stroke-width="1.5"
+          stroke-miterlimit="10"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+      <span>{{ "ADMIN.SIDEBAR.MAIN_CATEGORIES" | translate }}</span>
+    </a>
+  </div>
+
   <!-- HR -->
   <div>
     <div
@@ -1321,7 +1371,7 @@
   <div>
     <a
       class="flex items-center cursor-pointer side-bar_links side-bar_links gap-[10px]"
-      routerLink="/go-admin/dashboard/logout"
+      (click)="logout()"
     >
       <svg
         width="20"
@@ -1331,21 +1381,21 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          d="M18.3333 1.66602L11.5 8.49935"
+          d="M7.5 7.67V6.33C7.5 4.25 9.08 2.5 11.25 2.5H13.83C16 2.5 17.5 4.25 17.5 6.33V13.67C17.5 15.75 16 17.5 13.83 17.5H11.25C9.08 17.5 7.5 15.75 7.5 13.67V12.33"
           stroke="#292D32"
           stroke-width="1.5"
           stroke-linecap="round"
           stroke-linejoin="round"
         />
         <path
-          d="M10.832 5.14062V9.16563H14.857"
+          d="M12.9998 10H3.01648"
           stroke="#292D32"
           stroke-width="1.5"
           stroke-linecap="round"
           stroke-linejoin="round"
         />
         <path
-          d="M9.16797 1.66602H7.5013C3.33464 1.66602 1.66797 3.33268 1.66797 7.49935V12.4993C1.66797 16.666 3.33464 18.3327 7.5013 18.3327H12.5013C16.668 18.3327 18.3346 16.666 18.3346 12.4993V10.8327"
+          d="M4.85 7.65L2.5 10L4.85 12.35"
           stroke="#292D32"
           stroke-width="1.5"
           stroke-linecap="round"
